--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                         </div>
                         <p class="content-text-2">в области спортивной физиологии и нутрициологии</p>
                         <a class="content-link" href="#">узнать подробнее</a>
-                        <a class="arrow" href="#"><img src="/images/icons/Arrow.svg" alt="arrow"></a>
+                        <a class="arrow" href="#"><img src="images/icons/Arrow.svg" alt="arrow"></a>
                     </div>
                     <div class="visual">
                         <div class="visual-gradient-left"></div>
                         <div class="visual-gradient-right"></div>
-                        <img class="visual-img" src="/images/files/@1x/girl.png" alt="girl">
+                        <img class="visual-img" src="images/files/@1x/girl.png" alt="girl">
                     </div>
                 </div> 
             </div>
