--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header">
                 <div class="header-item">
                     <div class="header-logo">
-                     <a href="#" class="header-logo"></a>
+                     <a href="#" class="header-logo"><img src="images/icons/logo.svg" alt="logo"></a>
                     </div>
                  <ul class="header-nav">
                      <li><a href="#">Мероприятия</a></li>
@@ -26,8 +26,8 @@
                  </ul>  
                 </div> 
             <div class="social">
-                <a href="#" class="social-IN"></a>
-                <a href="#" class="social-FB"></a>
+                <a href="#" class="social-IN"><img src="images/icons/IN.svg" alt="IN"></a>
+                <a href="#" class="social-FB"><img src="images/icons/FB.svg" alt="FB"></a>
             </div>  
             </div>
         </div> 
